# SendHeartBeat

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  project-config.txt
cmake/: ProjectInit.cmake
cmake/Modules/: ApplyProjectConfig.cmake  CheckCPUVendor.cmake  CheckOS.cmake  FindAsio.cmake  FindLHWM-Wrapper.cmake  FindPFR.cmake  FindSQLite3.cmake  ResolvInstallPrefix.cmake  SetupLLVM.cmake
cmake/Toolchain/: linux-gcc.toolchain.cmake  linux-llvm.toolchain.cmake  windows-msvc.toolchain.cmake
include/: DataPkt.h  Utils.h  config.h.in
src/Client/: CMakeLists.txt  Client.cpp  Client.h  DataHandler.cpp  GetCpuInfo.cpp  GetCpuSensorID.cpp  GetGpuInfo.cpp  GetGpuSensorID.cpp  GetMachModel.cpp  Sender.cpp
src/Server/: CMakeLists.txt  DBOperations.cpp  DataHandler.cpp  Server.cpp  Server.h  Watcher.cpp  WriteToDB.cpp
